# any-uart

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
any-uart/: Cargo.toml
any-uart/src/: aux_mini.rs  lib.rs  ns16550.rs  pl011.rs
dtb/: rk3568-firefly-roc-pc-se.dtb
dtb-early-console/: Cargo.toml
dtb-early-console/src/: aux_mini.rs  lib.rs  ns16550.rs  pl011.rs
hello/: Cargo.toml  build.rs  link.ld
hello/src/: lib.rs
hello/tests/: test.rs
