[package]
name = "any-uart"
version = "0.2.5"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "Init early console from device tree, mostly for Arm"
keywords = ["pl011", "8250", "no-std", "earlycon", "dtb"]
license = "MIT"
categories = ["no-std", "embedded", "hardware-support"]
repository = "https://github.com/rcore-os/any-uart"
readme = "../README.md"

[features]
alloc = []


[dependencies]
fdt-parser = "0.4"
embedded-hal-nb = "1.0"
bitflags = "2.8"
link-boot = "0.2"
